# maven-ai-engineer

./: .env_example  .gitignore  pyproject.toml
src/maven_ai_engineer/: __init__.py  commands.py  functions.py  main.py  openai.py  prompts.py  questions.py
src/maven_ai_engineer/commands/: __init__.py  chat.py  mozilla.py  transcription.py
src/maven_ai_engineer/embedding/: embed.py
