[project]
name = "maven-ai-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
packages = [
    { include = "maven-ai-engineer" }
]
dependencies = [
    "openai>=1.52.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bot = 'maven_ai_engineer.main:main'
